# MSPro-Ltd-Corp

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  take-mockup-screenshots.mjs  take-mockups.mjs  take-screenshots.cjs
.claude/: launch.json
.departments-wip/: api-departments.ts  departments.ts
.github/: PULL_REQUEST_TEMPLATE.md
cli/: CHANGELOG.md  README.md  esbuild.config.mjs  package.json
doc/: AGENTCOMPANIES_SPEC_INVENTORY.md  CLI.md  CLIPHUB.md  DATABASE.md  DEPLOYMENT-MODES.md  DEVELOPING.md  DOCKER.md  GOAL.md  OPENCLAW_ONBOARDING.md  PRODUCT.md  PUBLISHING.md  README-draft.md  RELEASE-AUTOMATION-SETUP.md  RELEASING.md  SPEC-implementation.md  SPEC.md  TASKS-mcp.md  TASKS.md  UNTRUSTED-PR-REVIEW.md  execution-semantics.md  memory-landscape.md
docker/: Dockerfile.onboard-smoke  docker-compose.quickstart.yml  docker-compose.untrusted-review.yml  docker-compose.yml
docs/: agents-runtime.md  docs.json  feedback-voting.md
evals/: README.md
patches/: embedded-postgres@18.1.0-beta.16.patch
releases/: v0.2.7.md  v0.3.0.md  v0.3.1.md  v2026.318.0.md  v2026.325.0.md  v2026.403.0.md  v2026.416.0.md
report/: 2026-03-13-08-46-token-optimization-implementation.md
scripts/: backup-db.sh  build-npm.sh  clean-onboard-git.sh  clean-onboard-npm.sh  (+26 more)
src-tauri/: Cargo.toml  package.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  updater.rs
(+683 files in other folders)
